# myCPPProject

./: CMakeLists.txt  README.md  main.cpp
data_structures/: avl.tpp  binary_search_tree.tpp  linked_list.tpp  node.tpp  queue.tpp  stack.tpp
header_files/: dataStructures.h  myAlgorithms.h  utilities.h
my_algorithms/: merge_sort.cpp
utilities/: basicMaths.cpp
